# TetraCover

./: .gitignore  CmakeLists.txt  Doxyfile
TetraCoverLib/: CMakeLists.txt
TetraCoverLib/include/: cell.h  color_enum.h  coords.h  line.h  playfield.h  tetromino.h
TetraCoverLib/src/: cell.cpp  line.cpp  playfield.cpp  tetromino.cpp
cli_app/: CmakeLists.txt
cli_app/src/: main.cpp
gui_app/: CmakeLists.txt
gui_app/include/: main_window.h  playfield_panel.h  timer.h
gui_app/src/: main.cpp  main_window.cpp  playfield_panel.cpp  timer.cpp
lib/: CMakeLists.txt
lib/include/: bag.h  cell.h  color_enum.h  coords.h  engine.h  engine_snapshot.h  line.h  observer.h  playfield.h  tetromino.h
lib/src/: bag.cpp  cell.cpp  engine.cpp  line.cpp  playfield.cpp  tetromino.cpp
src/: main.cpp
